crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__activation_script_cmd.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
@SET "PATH=%PATH%;__PREFIX__/bin;/usr/bin;/bin;/usr/sbin;/sbin;/usr/local/bin"
@SET "CONDA_PREFIX=__PREFIX__"

