crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__activation_script_fish.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
set -gx PATH "__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
set -gx CONDA_PREFIX "__PREFIX__"

