crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__activation_script_xonsh.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
$PATH = "__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
$CONDA_PREFIX = "__PREFIX__"
source-bash "__PREFIX__/etc/conda/activate.d/script1.sh"

