crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__after_activation_fast_path.snap
---
source: crates/rattler_shell/src/activation.rs
expression: env_diff
---
PKG1: "Hello, world!"
PKG2: "Hello, world!"
STATE: "Hello, world!"
