crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__bash.snap
---
source: crates/rattler_shell/src/activation.rs
expression: env_diff
---
PKG1: "Hello, world!"
PKG2: "Hello, world!"
SCRIPT_ENV: "Hello, world!"
STATE: "Hello, world!"

