crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__run_activation.snap
---
source: crates/rattler_shell/src/activation.rs
expression: env_diff
---
PKG1: "Hello, world!"
STATE: "Hello, world!"
PKG2: "Hello, world!"
SCRIPT_ENV: "Hello, world!"

