crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__run_activation_powershell.snap
---
source: crates/rattler_shell/src/activation.rs
expression: env_diff
---
PKG2: "Hello, world!"
PKG1: "Hello, world!"
STATE: "Hello, world!"
SCRIPT_ENV: "Hello, world!"

