crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_activation_script_bash_prepend.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
export PATH="__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:${PATH}"
export CONDA_SHLVL=1
export CONDA_PREFIX=__PREFIX__
. __PREFIX__/etc/conda/activate.d/script1.sh
